fix homepage spacing

--- a/src/style.scss
+++ b/src/style.scss
@@ -337,7 +337,7 @@ a {
 
 .homepage-description {
 	text-align: center;
-	width: 26em;
+	width: 25em;
 	margin-top: 10vh;
 	margin-bottom: 6em;
 	padding-left: 2em;
@@ -350,7 +350,7 @@ a {
 	}
 
 	.homepage-description{
-		width: 35em;
+		width: 30em;
 	}
 }
 
